--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0px !important;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -38,7 +39,7 @@ body {
 
 .grid .gridListItem {
     border: 2px solid #04AA6D;
-    min-width: 24%;
+    width: 300px;
     margin: 2% .35%;
     display: inline-flex;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
@@ -176,4 +177,10 @@ select {
 .help {
     font-size: 14px;
     color: #6c757d!important;
+}
+
+#courses-body {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
 }
