--- a/style.css
+++ b/style.css
@@ -3,6 +3,42 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.button {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.row {
+    margin-top: 10px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+
+.export-button {
+    background-color: #4CAF50;
+}
+
+.export-button:hover {
+    background-color: #21a625;
+    cursor: pointer;
+}
+
+.import-button {
+    background-color: #008CBA;
+}
+
+.import-button:hover {
+    background-color: #025d7b;
+    cursor: pointer;
+}
+
 .navbar {
     background-color: #333;
     overflow: hidden;
