--- a/display-timetable.css
+++ b/display-timetable.css
@@ -7,8 +7,8 @@
     grid-template-areas: ". week" "time content";
     grid-template-columns: 120px;
     grid-template-rows: 60px;
-    width: 100vw;
-    height: 100vh;
+    width: 95%;
+    height: 85vh;
 }
 
 .timetable .accent-pink-gradient {
