--- a/style.css
+++ b/style.css
@@ -206,11 +206,6 @@ select {
     color: red;
 }
 
-.direction-row {
-    display: flex;
-    flex-direction: row;
-}
-
 .help {
     font-size: 14px;
     color: #6c757d!important;
@@ -221,10 +216,10 @@ select {
     display: block;
     overflow-y: hidden;
     overflow-x: auto;
-    width: 95%;
+    width: 100%;
     height: 300px;
-    margin-left: 2.5%;
     white-space: nowrap;
+    background-color: #04AA6D;
 }
 
 .display-none {
@@ -239,4 +234,26 @@ select {
 
 p#dependencyExplanation {
     padding: 10px;
+    background-color: #04AA6D;
+    font-size: large;
+    font-weight: bold;
+}
+
+td.label {
+    text-align: right;
+}
+
+section#create-course-title {
+    background-color: #4CAF50;
+    text-align: center;
+    display: block;
+    width: 20%;
+    padding: 5px;
+    cursor: pointer;
+    color: white;
+}
+
+#course-form {
+    display: block;
+    visibility: hidden;
 }
